--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             flex-wrap: wrap;
             justify-content: center;
             gap: 10px;
-            padding: 20px;
+            padding: 100px;
         }
         .gallery img {
             max-width: 100%;
@@ -40,6 +40,8 @@
             position: fixed;
             bottom: 0;
             width: 100%;
+            height: 40px;
+            font-size: 12px;
         }
     </style>
 </head>
