--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
 <body>
     <header>
         <h1><strong>Feliz 1 Ano de Namoro meu bem!!!</strong></h1>
-        <p>Te amo Mayanna, você é muito especial para mim</p>
-        <p>Obrigado por tudo, por ser essa pessoa incrível que você é</p>
+        <p>Te amo Mayanna, você é muito especial para mim.</p>
+        <p>Obrigado por tudo.</p> 
+        <p>Voce é uma pessoa incrível e te quero sempre ao meu lado.</p>
 
     </header>
     <div class="gallery">
