--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             width: 100%;
             height: 40px;
             font-size: 12px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            
         }
     </style>
 </head>
