--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
             flex-wrap: wrap;
             justify-content: center;
             gap: 10px;
-            padding: 100px;
+            padding: 200px;
         }
         .gallery img {
             max-width: 100%;
             height: auto;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            padding: 0px;
         }
         footer {
             background-color: #300832;
@@ -42,10 +43,8 @@
             width: 100%;
             height: 40px;
             font-size: 12px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            
+           
+
         }
     </style>
 </head>
@@ -61,7 +60,6 @@
         <img src="imagens/img1.png" alt="Foto 1">
         <img src="imagens/img2.png" alt="Foto 2">
         <img src="imagens/img3.png" alt="Foto 3">
-        <br>
     </div>
     <footer>
         <p><strong>Com amor, e muita I.A, Haiket ❤️</strong></p>
@@ -104,3 +102,7 @@
         to { opacity: 1; }
     }
 </style>
+
+
+
+//tira o olho 
