--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             padding: 0;
             background-color: #a90387d8;
             text-align: center;
+            padding: 20px;
         }
         header {
             background-color: #900374ee;
