--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             padding: 0;
             background-color: #a90387d8;
             text-align: center;
-            padding: 20px;
+            margin_bottom: 10px;
         }
         header {
             background-color: #900374ee;
@@ -41,7 +41,7 @@
             padding: 0px;
             position: fixed;
             bottom: 0;
-            width: 180%;
+            width: 100%;
             height: 40px;
             font-size: 12px;
            
@@ -61,6 +61,7 @@
         <img src="imagens/img1.png" alt="Foto 1">
         <img src="imagens/img2.png" alt="Foto 2">
         <img src="imagens/img3.png" alt="Foto 3">
+        
     </div>
     <footer>
         <p><strong>Com amor, e muita I.A, Haiket ❤️</strong></p>
